@@ -413,7 +413,7 @@ main(int argc,char **argv)
   /* 20250208: WARN user about dicey types of renaming netCDF4 files */
   if(fl_fmt == NC_FORMAT_NETCDF4 || fl_fmt == NC_FORMAT_NETCDF4_CLASSIC){
     if(nbr_var_rnm || nbr_dmn_rnm){
-      if(nco_dbg_lvl >= nco_dbg_std) (void)fprintf(stdout,"%s: WARNING Renaming variables, dimensions, and attributes in any netCDF3-format file (i.e., classic, 64-bit, and CDF5) ALWAYS works. Moreover, renaming groups and attributes in any netCDF4-format file always works. However, these re-assuring notes precede a discomfitting message: A longstanding problem in the netCDF library (it is not an NCO issue per se) sometimes crashes %s or, even worse, silently corrupts data in the output file when input file is netCDF4-format. These outcomes are only known to occur when attempting to rename variables to/from the same names as dimensions (i.e., coordinate variables), and or dimensions to/from the same names as variables. If you are doing that, and the command completes, we suggest that you manually inspect the output coordinate values for corruption. A long thread describing the status of this issue since 2017 is at https://github.com/Unidata/netcdf-c/issues/597. A tedious chronology of the issue dating back to 2007 is at https://nco.sourceforge.net/nco.html#bug_nc4_rename.\n%s: HINT Do not expect this issue to be fixed in the near future :)\n%s: HINT There is a straightforward two- or three-step workaround that ALWAYS works: 1. Translate the file to any netCDF3 format (e.g., with \"ncks -5 in.nc out.nc\"). 2. Perform the renaming. 3. (Optional, only necessary if you wish to recover the netCDF4 features like compression) Translate back to a netCDF4-format (e.g., with \"ncks -7 in.nc out.nc\").\n",nco_prg_nm,nco_prg_nm,nco_prg_nm,nco_prg_nm);
+      if(nco_dbg_lvl >= nco_dbg_std) (void)fprintf(stdout,"%s: WARNING Renaming variables, dimensions, and attributes in any netCDF3-format file (i.e., classic, 64-bit, and CDF5) ALWAYS works. Moreover, renaming groups and attributes in any netCDF4-format file always works. However, these re-assuring notes precede a discomfitting message: A longstanding problem in the netCDF library (it is not an NCO issue per se) sometimes crashes %s or, even worse, silently corrupts data in the output file when input file is netCDF4-format. These outcomes are only known to occur when attempting to rename variables to/from the same names as dimensions (i.e., coordinate variables), and or dimensions to/from the same names as variables. If you do that, and the command completes, we suggest that you manually inspect the output coordinate values for corruption. A long thread describing the status of this issue since 2017 is at https://github.com/Unidata/netcdf-c/issues/597. A tedious chronology of the issue dating back to 2007 is at https://nco.sourceforge.net/nco.html#bug_nc4_rename.\n%s: HINT Do not expect this issue to be fixed in the near future :)\n%s: HINT There is a straightforward two- or three-step workaround that ALWAYS works: 1. Translate the file to any netCDF3 format (e.g., with \"ncks -5 in.nc out.nc\"). 2. Perform the renaming. 3. (Optional, only necessary if you wish to recover the netCDF4 features like compression) Translate back to a netCDF4-format (e.g., with \"ncks -7 in.nc out.nc\").\n",nco_prg_nm,nco_prg_nm,nco_prg_nm,nco_prg_nm);
     } /* !nbr_var_rnm nbr_dmn_rnm */
   } /* !fl_fmt */
 
