@@ -1,8 +1,12 @@
-2025-04-17  Charlie Zender  <zender@uci.edu>
+2025-04-18  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.4-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha02: Hypr Paddle';git push
-	git tag -a 5.3.4-alpha02 -m 'ncremap: nfr X,Y crd';git push --tags
+	git tag -a 5.3.4-alpha02 -m 'ncks: map chk trbilin fix, brk sng	att prn; ncremap: nfr XY crd';git push --tags
+
+	* ncks break CDL NC_STRING attributes at every '\n' like NC_CHAR attributes nco_prn.c
+
+2025-04-17  Charlie Zender  <zender@uci.edu>
 
 	* ncks squelch map-checker false-positive frac_a/b WARNINGs on TR bilinear maps
 
